fix: deploy to zeabur

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@lmmmmmm/eslint-config": "^0.1.0",
     "@nestjs/common": "^9.4.0",
+    "@nestjs/config": "^2.3.1",
     "@nestjs/core": "^9.4.0",
     "@nestjs/platform-express": "^9.4.0",
     "@nestjs/platform-socket.io": "^9.4.0",
